fixed vertical alignement of emojis + fixed warnings

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -203,6 +203,10 @@ svg {
   font-weight: 600;
 }
 
+.emojione {
+  vertical-align: middle;
+}
+
 @media screen and (max-width: 1024px) {
   .container {
     margin: 0;
